--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <input type="number" id="peso" name="peso" maxlength="3" autocomplete="off"  placeholder="92">
     
                 <label for="altura">Altura</label>
-                <input type="number" id="altura" name="altura" maxlength="4" autocomplete="off"  placeholder="1.80">
+                <input type="text" id="altura" name="altura" maxlength="4" autocomplete="off"  placeholder="1.80">
     
                 <button type="submit">Calcular</button>
             </form>
